--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ footer {
 </head>
 <body>
     <nav>
-        <a href="tyrant.html"><img src="imageswebdes/remove.png"></a>
+        <a href="index.html"><img src="imageswebdes/remove.png"></a>
         <ul>
             <li><a href="gallery.html">GALLERY</a></li>
             <li><a href="infographics.html">INFOGRAPHICS</a></li>
