--- a/gallery.html
+++ b/gallery.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <a href="tyrant.html"><img src="imageswebdes/remove.png" ></a>
+        <a href="index.html"><img src="imageswebdes/remove.png" ></a>
         <ul>
             <li><a href="gallery.html">GALLERY</a></li>
             <li><a href="infographics.html">INFOGRAPHICS</a></li>
