--- a/infographics.html
+++ b/infographics.html
@@ -16,7 +16,7 @@ padding: 0;">
     left: 0;
     height: 100vh; 
     overflow-y: auto;">
-        <a href="tyrant.html"><img style="width: 100px;
+        <a href="index.html"><img style="width: 100px;
             height: 100px;
             border-radius: 50%; 
             object-fit: cover;
